--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://www.invisalignaccessories.com/assets/background-white-7b88a7eee57eed0a2df100d58a5e728d16d3b0562e30cdfa24da7263a742577f.jpg");
 }
 
 code {
