--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,12 @@
   font-family: 'Montserrat', sans-serif; /* non-heading font*/
 
 }
+
+.vl {
+  border-left: 2px solid rgb(49, 48, 48);
+  height: 250px;
+}
+
+hr{
+  width: 80%;
+}
