--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,12 @@
   min-height: 10vh;
   background: black;
   color: white;
-  opacity: 0.9;
-  position: sticky;
+  opacity: 0.89;
+}
+
+.navButtons{
+  text-align: right;
+  align-items: right;
 }
 
 .navLogo{
@@ -28,6 +32,7 @@
   font-family: 'Montserrat', sans-serif; /* non-heading font*/
 
 }
+
 
 .vl {
   border-left: 2px solid rgb(49, 48, 48);
@@ -53,4 +58,26 @@ hr{
 .priceAndButton{
 
   text-align: center;
+}
+
+.inputNumber{
+
+  text-align: center;
+  width: 20%;
+  margin-left: 25px;
+}
+
+.addToCartButton {
+  margin-top: 20px;
+  height: 20%;
+  width: 70%;
+}
+
+.r1{
+  margin-top: 7%;
+}
+
+.c1{
+  font-family: 'Montserrat', sans-serif; /* non-heading font*/
+
 }
